[package]
name = "racoon"
version = "0.1.0"
edition = "2021"
authors = ["Asayake <contact@asayake.xyz>"]
license = "ISC"
homepage = "https://racoon.asayake.xyz"
description = "A Remote Controlled Metronome"

[workspace]
members = ["xtask"]

[lib]
# The `lib` artifact is needed for the standalone target
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }
egui = "0.29"
egui_extras = { version = "*", features = ["image", "svg"] }
eframe = { version = "0.29", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
] }

if-addrs = "0.12.0"
rodio = "0.19.0"
spin_sleep = "1.2.0"
poem = { version = "3.1.0", features = ["compression", "static-files", "websocket"] }
poem-openapi = { version = "5.1.0", features = ["swagger-ui", "redoc"] }
tokio ={  version = "1.40.0", features = ["rt-multi-thread"]}
port_check = "0.2.1"
local-ip-address = "0.6.3"
qrcode = "0.14.1"
image = "0.25.4"
